--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
       "apisauce": "1.1.1",
       "autoprefixer": "^9.7.5",
       "babel-plugin-macros": "^2.8.0",
+      "date-time-picker": "0.5.3",
       "js-cookie": "2.2.1",
       "mobx": "5.15.0",
       "mobx-react": "6.1.4",
