--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
       "react-dom": "^16.13.0",
       "react-icons": "3.10.0",
       "react-loader-spinner": "3.1.14",
+      "react-modal": "3.11.2",
       "react-router-dom": "^5.1.2",
       "react-scripts": "3.4.0",
       "react-select": "3.1.0",
