--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
       "deploy": "export PUBLIC_URL=/2019/$C9_USER/react && npm run build && ./deploy.sh",
       "storybook": "start-storybook -p 8080 -s public",
       "build-storybook": "build-storybook -s public",
-      "pretty": "npx prettier --write \"src/**/*.js\""
+      "pretty": "npx prettier --write \"src/**/*.js\"",
+      "coverage": "react-app-rewired test --env=jest-environment-jsdom-sixteen --coverage --watchAll=false"
    },
    "husky": {
       "hooks": {
@@ -97,5 +98,11 @@
       "lint-staged": "10.2.6",
       "react-app-rewired": "2.1.5",
       "tailwindcss": "^1.2.0"
+   },
+   "jest": {
+      "testEnvironment": "node",
+      "collectCoverageForm": [
+         "src/*.{js,jsx}"
+      ]
    }
 }
